fixed elements overlaping header

--- a/components/headers/main-header.module.scss
+++ b/components/headers/main-header.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   background-color: var(--primary);
+  z-index: 1;
 
   &::before,
   &::after {
